Details
-
Type:
Bug
-
Status: Resolved
-
Priority:
Blocker
-
Resolution: Fixed
-
Affects Version/s: Impala 2.8.0
-
Fix Version/s: Impala 2.8.0
-
Component/s: Backend
-
Labels:
-
Target Version:
Description
I saw a failure in the exhaustive tests, but it is in a be test that is run as part of core:
Log file created at: 2016/11/06 04:08:04 Running on machine: impala-boost-static-burst-slave-0ce0.vpc.cloudera.com Log line format: [IWEF]mmdd hh:mm:ss.uuuuuu threadid file:line] msg E1106 04:08:04.023739 1412 tmp-file-mgr.cc:258] Error for temporary file '/tmp/impala-scratch/0:0_4fb18f92-39bb-4f80-ae7c-dc68b5d420c1': fopen(/tmp/impala-scratch/0:0_4fb18f92-39bb-4f80-ae7c-dc68b5d420c1, "rb+") failed with errno=2 description=Error(2): No such file or directory E1106 04:08:04.024101 1412 tmp-file-mgr.cc:258] Error for temporary file '/tmp/impala-scratch/0:0_4fb18f92-39bb-4f80-ae7c-dc68b5d420c1': fopen(/tmp/impala-scratch/0:0_4fb18f92-39bb-4f80-ae7c-dc68b5d420c1, "rb+") failed with errno=2 description=Error(2): No such file or directory E1106 04:08:04.348903 1678 tmp-file-mgr.cc:258] Error for temporary file '/tmp/impala-scratch/0:0_4811bd63-e6b5-459f-ac40-305f965f29b0': fopen(/tmp/impala-scratch/0:0_4811bd63-e6b5-459f-ac40-305f965f29b0, "rb+") failed with errno=2 description=Error(2): No such file or directory E1106 04:08:04.349059 1676 tmp-file-mgr.cc:258] Error for temporary file '/tmp/impala-scratch/0:0_4811bd63-e6b5-459f-ac40-305f965f29b0': fopen(/tmp/impala-scratch/0:0_4811bd63-e6b5-459f-ac40-305f965f29b0, "rb+") failed with errno=2 description=Error(2): No such file or directory E1106 04:08:04.503168 32684 tmp-file-mgr.cc:258] Error for temporary file '/tmp/impala-scratch/0:0_9a608692-60cf-44df-990e-8477126bb594': Truncate file /tmp/impala-scratch/0:0_9a608692-60cf-44df-990e-8477126bb594 to length 2048 failed with errno 2 (Error(2): No such file or directory) E1106 04:08:04.641846 32684 tmp-file-mgr.cc:258] Error for temporary file '/tmp/buffered-block-mgr-test.0/impala-scratch/0:0_fe06514e-4f35-43f0-be84-8fa7550dea0a': Create file /tmp/buffered-block-mgr-test.0/impala-scratch/0:0_fe06514e-4f35-43f0-be84-8fa7550dea0a failed with errno=13 description=Error(13): Permission denied E1106 04:08:04.646608 32684 tmp-file-mgr.cc:258] Error for temporary file '/tmp/buffered-block-mgr-test.0/impala-scratch/0:1_796f7476-16d2-4061-9483-aeb05efb0e54': Create file /tmp/buffered-block-mgr-test.0/impala-scratch/0:1_796f7476-16d2-4061-9483-aeb05efb0e54 failed with errno=13 description=Error(13): Permission denied E1106 04:08:04.646981 32684 tmp-file-mgr.cc:258] Error for temporary file '/tmp/buffered-block-mgr-test.0/impala-scratch/0:1_796f7476-16d2-4061-9483-aeb05efb0e54': Create file /tmp/buffered-block-mgr-test.0/impala-scratch/0:1_796f7476-16d2-4061-9483-aeb05efb0e54 failed with errno=13 description=Error(13): Permission denied E1106 04:08:04.784018 32684 tmp-file-mgr.cc:258] Error for temporary file '/tmp/buffered-block-mgr-test.1/impala-scratch/0:0_a6243ae5-bd4f-4c98-9f89-3ef7e3069f24': Create file /tmp/buffered-block-mgr-test.1/impala-scratch/0:0_a6243ae5-bd4f-4c98-9f89-3ef7e3069f24 failed with errno=13 description=Error(13): Permission denied E1106 04:08:04.790413 32684 tmp-file-mgr.cc:258] Error for temporary file '/tmp/buffered-block-mgr-test.0/impala-scratch/0:0_c98a86be-20e3-4dbf-8090-20c4c3a8bd95': Create file /tmp/buffered-block-mgr-test.0/impala-scratch/0:0_c98a86be-20e3-4dbf-8090-20c4c3a8bd95 failed with errno=13 description=Error(13): Permission denied E1106 04:08:04.791249 32684 tmp-file-mgr.cc:258] Error for temporary file '/tmp/buffered-block-mgr-test.1/impala-scratch/0:0_a6243ae5-bd4f-4c98-9f89-3ef7e3069f24': Create file /tmp/buffered-block-mgr-test.1/impala-scratch/0:0_a6243ae5-bd4f-4c98-9f89-3ef7e3069f24 failed with errno=13 description=Error(13): Permission denied E1106 04:08:04.791865 32684 tmp-file-mgr.cc:258] Error for temporary file '/tmp/buffered-block-mgr-test.0/impala-scratch/0:0_c98a86be-20e3-4dbf-8090-20c4c3a8bd95': Create file /tmp/buffered-block-mgr-test.0/impala-scratch/0:0_c98a86be-20e3-4dbf-8090-20c4c3a8bd95 failed with errno=13 description=Error(13): Permission denied E1106 04:08:05.514145 32684 buffered-block-mgr-test.cc:410] Iteration 0 E1106 04:08:05.634829 32684 buffered-block-mgr-test.cc:410] Iteration 0 E1106 04:08:05.802711 32684 buffered-block-mgr-test.cc:410] Iteration 0 E1106 04:08:05.998805 3014 buffered-block-mgr-test.cc:410] Iteration 0 E1106 04:08:05.998865 3015 buffered-block-mgr-test.cc:410] Iteration 0 E1106 04:08:06.516338 3016 buffered-block-mgr-test.cc:410] Iteration 0 E1106 04:08:06.516345 3017 buffered-block-mgr-test.cc:410] Iteration 0 F1106 04:08:07.203595 2971 disk-io-mgr.cc:782] Check failed: !desc->is_client_buffer()